WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294869
[macOS] Interaction region debug overlay is incorrect for elements with non-uniform border radii
https://bugs.webkit.org/show_bug.cgi?id=294869
Summary
[macOS] Interaction region debug overlay is incorrect for elements with non-u...
Lily Spiniolas
Reported
2025-06-23 16:22:27 PDT
rdar://154136045
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2025-06-23 16:27:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47088
EWS
Comment 2
2025-06-23 20:26:17 PDT
Committed
296545@main
(98116522246a): <
https://commits.webkit.org/296545@main
> Reviewed commits have been landed. Closing PR #47088 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug