[macOS] Interaction region debug overlay is incorrect for elements with non-uniform border radii https://bugs.webkit.org/show_bug.cgi?id=294869 rdar://154136045

Reviewed by Abrar Rahman Protyasha, Tim Horton, and Wenson Hsieh.

If the interaction region already has a calculated clip path (true for elements
with non-uniform border radii), then use it instead of calculating an incorrect one.
The path is transformed if needed to match the interaction region's onscreen position.

* Source/WebCore/page/DebugPageOverlays.cpp:
(WebCore::InteractionRegionOverlay::drawRect):

Canonical link: https://commits.webkit.org/296545@main